--- a/app/src/main/res/layout/activity_add_weapon.xml
+++ b/app/src/main/res/layout/activity_add_weapon.xml
@@ -116,7 +116,7 @@
 
     <Button
         android:id="@+id/addWeapon_submit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
