--- a/app/src/main/res/layout/weapons_row.xml
+++ b/app/src/main/res/layout/weapons_row.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="208dp"
-        tools:layout_editor_absoluteY="16dp">
+        android:background="@drawable/border"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <Button
             android:id="@+id/wList_edit"
@@ -22,14 +22,6 @@
             android:text="Edit Weapon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/wList_editAttachment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit Attach."
-            app:layout_constraintEnd_toEndOf="@+id/wList_edit"
-            app:layout_constraintTop_toBottomOf="@+id/wList_edit" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,17 +39,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Weapon Name"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/wList_nameColon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    app:layout_constraintStart_toEndOf="@+id/wList_name" />
 
                 <TextView
                     android:id="@+id/wList_damage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:paddingLeft="16dp"
-                    android:text="100%"
+                    android:text="100"
                     app:layout_constraintStart_toEndOf="@+id/wList_name"
                     tools:layout_editor_absoluteY="0dp" />
 
@@ -65,9 +65,7 @@
                     android:id="@+id/wList_damageText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginStart="8dp"
-                    android:text="Damage"
+                    android:text="% Damage"
                     app:layout_constraintStart_toEndOf="@+id/wList_damage"
                     tools:layout_editor_absoluteY="0dp" />
             </android.support.constraint.ConstraintLayout>
@@ -120,56 +118,127 @@
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/wList_attached"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/wList_editAttachment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:text="Remove"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <android.support.constraint.ConstraintLayout
+                        android:id="@+id/wList_attachedLayoutSub1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:id="@+id/wList_attachmentText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="12dp"
+                            android:text="Attachment: "
+                            android:textStyle="bold|italic"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/wList_attachmentName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:text="Attachment Name"
+                            app:layout_constraintStart_toEndOf="@+id/wList_attachmentText"
+                            tools:layout_editor_absoluteY="0dp" />
+                    </android.support.constraint.ConstraintLayout>
+
+                    <android.support.constraint.ConstraintLayout
+                        android:id="@+id/wlist_attachedlayoutSub2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/wList_attachmentAttOne"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="24dp"
+                            android:text="Attribute One"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                        <TextView
+                            android:id="@+id/wList_attachmentComma"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=","
+                            app:layout_constraintStart_toEndOf="@+id/wList_attachmentAttOne" />
+
+                        <TextView
+                            android:id="@+id/wList_attachmentAttTwo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:text="Attribute Two"
+                            app:layout_constraintStart_toEndOf="@+id/wList_attachmentComma" />
+                    </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/wList_unattachedLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp">
 
                 <TextView
-                    android:id="@+id/wList_attachmentText"
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="Attachment: "
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:text="Select Attachment:"
+                    android:textStyle="italic"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/wList_attachmentName"
+                <Button
+                    android:id="@+id/wList_addAttachment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:text="Add"
+                    android:onClick="addAttachment"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
-                    android:text="Attachment Name"
-                    app:layout_constraintStart_toEndOf="@+id/wList_attachmentText"
-                    tools:layout_editor_absoluteY="0dp" />
-            </android.support.constraint.ConstraintLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/wList_attachmentAttOne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="6dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/wList_addAttachment"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:text="Attribute One" />
-
-                <TextView
-                    android:id="@+id/wList_attachmentComma"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@+id/wList_attachmentAttOne"
-                    android:text="," />
-
-                <TextView
-                    android:id="@+id/wList_attachmentAttTwo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/wList_attachmentComma"
-                    android:text="Attribute Two" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
             </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
