Begin implementing ListHandler

--- a/app/src/main/res/layout/activity_weapons_list.xml
+++ b/app/src/main/res/layout/activity_weapons_list.xml
@@ -41,6 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="showAddWeapon"
-            android:text="Add Weapon" />
+            android:text="Add New Weapon" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
