--- a/app/src/main/res/layout/activity_add_attachment.xml
+++ b/app/src/main/res/layout/activity_add_attachment.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditWeapon">
-
+    tools:context=".AddAttachment">
     <TextView
-        android:id="@+id/editWeapon_title"
+        android:id="@+id/addAttachment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Edit Weapon"
+        android:text="Add New Attachment"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,25 +21,25 @@
         android:layout_width="368dp"
         android:layout_height="462dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editWeapon_title"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintTop_toBottomOf="@+id/addAttachment_title"
+        tools:layout_addor_absoluteX="8dp">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_nameTitle"
+                android:id="@+id/addAttachment_nameTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name: " />
 
             <EditText
-                android:id="@+id/editWeapon_name"
+                android:id="@+id/addAttachment_name"
                 android:layout_width="274dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Weapon Name"
+                android:hint="Attachment Name"
                 android:inputType="textPersonName"
                 android:text="" />
         </TableRow>
@@ -50,13 +49,30 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_damageTitle"
+                android:id="@+id/addAttachment_primaryAttributeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Damage: " />
+                android:text="Primary Attribute: " />
+            <Spinner
+                android:id="@+id/addAttachment_primaryAttribute"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/addAttachment_primaryValueTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Primary Value: " />
 
             <EditText
-                android:id="@+id/editWeapon_damage"
+                android:id="@+id/addAttachment_primaryValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -70,13 +86,13 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_firstTalentTitle"
+                android:id="@+id/addAttachment_secondaryAttributeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="First Talent: " />
+                android:text="Secondary Attribute: " />
 
             <Spinner
-                android:id="@+id/editWeapon_firstTalent"
+                android:id="@+id/addAttachment_secondaryAttribute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </TableRow>
@@ -86,53 +102,32 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_secondTalentTitle"
+                android:id="@+id/addAttachment_secondaryValueTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Second Talent: " />
+                android:text="Secondary Value: " />
 
-            <Spinner
-                android:id="@+id/editWeapon_secondTalent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/addAttachment_secondaryValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="0 to 100 %"
+                android:inputType="number"
+                android:text="" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/editWeapon_freeTalentTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Free Talent: " />
-
-            <Spinner
-                android:id="@+id/editWeapon_freeTalent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/editWeapon_attachmentTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Attachment: " />
-
-            <Spinner
-                android:id="@+id/editWeapon_attachment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
         </TableRow>
 
     </TableLayout>
 
     <Button
-        android:id="@+id/editWeapon_submit"
+        android:id="@+id/addAttachment_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -140,26 +135,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="updateWeapon"
+        android:onClick="addAttachment"
         android:text="Submit"
-        app:layout_constraintBottom_toTopOf="@+id/editWeapon_delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/editWeapon_delete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:onClick="deleteWeapon"
-        android:text="Delete Weapon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
