--- a/app/src/main/res/layout/activity_attachments_list.xml
+++ b/app/src/main/res/layout/activity_attachments_list.xml
@@ -5,5 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AttachmentsList">
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/aList_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:text="Attachments" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/aList_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="420dp">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/aList_addAttachment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="showAddAttachment"
+            android:text="Add New Attachment" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
