--- a/app/src/main/res/layout/activity_edit_attachment.xml
+++ b/app/src/main/res/layout/activity_edit_attachment.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditWeapon">
-
+    tools:context=".EditAttachment">
     <TextView
-        android:id="@+id/editWeapon_title"
+        android:id="@+id/editAttachment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Edit Weapon"
+        android:text="Edit Attachment"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +21,7 @@
         android:layout_width="368dp"
         android:layout_height="462dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editWeapon_title"
+        app:layout_constraintTop_toBottomOf="@+id/editAttachment_title"
         tools:layout_editor_absoluteX="8dp">
 
         <TableRow
@@ -30,17 +29,17 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_nameTitle"
+                android:id="@+id/editAttachment_nameTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name: " />
 
             <EditText
-                android:id="@+id/editWeapon_name"
+                android:id="@+id/editAttachment_name"
                 android:layout_width="274dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Weapon Name"
+                android:hint="Attachment Name"
                 android:inputType="textPersonName"
                 android:text="" />
         </TableRow>
@@ -50,13 +49,30 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_damageTitle"
+                android:id="@+id/editAttachment_primaryAttributeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Damage: " />
+                android:text="Primary Attribute: " />
+            <Spinner
+                android:id="@+id/editAttachment_primaryAttribute"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/editAttachment_primaryValueTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Primary Value: " />
 
             <EditText
-                android:id="@+id/editWeapon_damage"
+                android:id="@+id/editAttachment_primaryValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -70,13 +86,13 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_firstTalentTitle"
+                android:id="@+id/editAttachment_secondaryAttributeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="First Talent: " />
+                android:text="Secondary Attribute: " />
 
             <Spinner
-                android:id="@+id/editWeapon_firstTalent"
+                android:id="@+id/editAttachment_secondaryAttribute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </TableRow>
@@ -86,15 +102,20 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_secondTalentTitle"
+                android:id="@+id/editAttachment_secondaryValueTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Second Talent: " />
+                android:text="Secondary Value: " />
 
-            <Spinner
-                android:id="@+id/editWeapon_secondTalent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/editAttachment_secondaryValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="0 to 100 %"
+                android:inputType="number"
+                android:text="" />
+
         </TableRow>
 
         <TableRow
@@ -102,29 +123,13 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/editWeapon_freeTalentTitle"
+                android:id="@+id/editAttachment_attachedToTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Free Talent: " />
+                android:text="Attached To: " />
 
             <Spinner
-                android:id="@+id/editWeapon_freeTalent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/editWeapon_attachmentTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Attachment: " />
-
-            <Spinner
-                android:id="@+id/editWeapon_attachment"
+                android:id="@+id/editAttachment_attachedTo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </TableRow>
@@ -132,7 +137,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/editWeapon_submit"
+        android:id="@+id/editAttachment_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -140,15 +145,15 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="updateWeapon"
+        android:onClick="updateAttachment"
         android:text="Submit"
-        app:layout_constraintBottom_toTopOf="@+id/editWeapon_delete"
+        app:layout_constraintBottom_toTopOf="@+id/editAttachment_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/editWeapon_delete"
+        android:id="@+id/editAttachment_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -156,10 +161,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="deleteWeapon"
-        android:text="Delete Weapon"
+        android:onClick="deleteAttachment"
+        android:text="Delete Attachment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 </android.support.constraint.ConstraintLayout>
