--- a/app/src/main/res/layout/weapons_row.xml
+++ b/app/src/main/res/layout/weapons_row.xml
@@ -72,7 +72,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="4dp">
 
                 <TextView
@@ -120,7 +120,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/wList_attached"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/wList_removeAttachment"
@@ -136,7 +136,7 @@
                 <LinearLayout
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <android.support.constraint.ConstraintLayout
@@ -199,7 +199,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/wList_unattachedLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp">
 
                 <TextView
@@ -215,26 +215,26 @@
 
                 <Button
                     android:id="@+id/wList_addAttachment"
-                    android:layout_width="120dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:text="Attach"
                     android:onClick="addAttachment"
+                    android:text="Attach"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Spinner
-                    android:id="@+id/spinner"
+                    android:id="@+id/wList_attachmentSpinner"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="2dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/wList_addAttachment"
                     app:layout_constraintStart_toStartOf="parent"
